# sensei-core

./: .audit.toml  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BATTLE_PLAN.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  mcp_settings.example.json  mcp_settings_test.json  models_list.txt  prompts.example.yaml
.github/workflows/: ci.yml  release.yml
crates/sensei-client/: Cargo.toml  README.md
crates/sensei-client/src/: main.rs  tui.rs
crates/sensei-common/: Cargo.toml  README.md
crates/sensei-common/src/: lib.rs
crates/sensei-lib/: Cargo.toml  README.md
crates/sensei-lib/migrations/: 20250101_init.sql  20250102_vectors.sql  20250103_router_cache.sql
crates/sensei-lib/src/: config.rs  errors.rs  lib.rs  llm.rs  mcp_client.rs  memory.rs
crates/sensei-lib/src/agents/: action.rs  mcp_agent.rs  mod.rs  router.rs  specialists.rs
crates/sensei-lib/src/tools/: mod.rs  nmap.rs  system.rs
crates/sensei-lib/tests/: a2a_mcp_test.rs  config_test.rs  mcp_loopback_test.rs  memory_rag_test.rs  rag_functional.rs  rag_test.rs  router_agent_test.rs  router_rlhf_test.rs  session_manager_test.rs  specialist_agent_test.rs  swarm_test.rs  tool_agent_test.rs  tools_test.rs
crates/sensei-mcp/: Cargo.toml  README.md
crates/sensei-mcp/src/: lib.rs  main.rs
crates/sensei-mcp/tests/: integration_test.rs
crates/sensei-server/: Cargo.toml  README.md  sensei_dev.db
crates/sensei-server/examples/: bench_sqlite.rs
crates/sensei-server/migrations/: 20250101_init.sql  20250102_vectors.sql
crates/sensei-server/src/: config.rs  lib.rs  llm.rs  main.rs  memory.rs
crates/sensei-server/src/agents/: action.rs  mod.rs  router.rs  specialists.rs
crates/sensei-server/src/tools/: mod.rs  nmap.rs  system.rs
crates/sensei-server/tests/: ask_endpoint.rs  bdd_memory.rs  config_test.rs  health_check.rs  rag_functional.rs  rag_test.rs  router_agent_test.rs  session_manager_test.rs  specialist_agent_test.rs  swarm_test.rs  tool_agent_test.rs  tools_test.rs
docs/: ARCHITECTURE.md  BEHAVIOR_SPEC.md  BEHAVIOUR_SPEC.md
scripts/: bench_router_v3.py  bench_uds_vs_tcp.py  benchmark.py  list_models.py  test_e2e.sh  test_hot_reload.sh  test_rag.py  validate_quality.py
