[package]
name = "sensei-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json"] }
sensei-common = { version = "0.1.0", path = "../sensei-common" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tui-textarea = "0.7.0"
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "tokio"] }
tower = "0.5.2"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
url = "2.5.4"
