[package]
name = "sensei-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
sensei-common = { path = "../sensei-common" }
sensei-lib = { path = "../sensei-lib" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
dotenvy = "0.15.7"
