[package]
name = "sensei-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
dotenvy = "0.15.7"
sensei-common = { path = "../sensei-common" }
sensei-lib = { path = "../sensei-lib" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[dev-dependencies]
http-body-util = "0.1.3"
hyper = "1.8.1"
serde_json = "1.0.145"
tempfile = "3.23.0"
tower = "0.5.2"